--- a/views/index.html
+++ b/views/index.html
@@ -364,11 +364,11 @@
 
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center background-image">
         <div class="col-md-6 p-lg-5 mx-auto my-5">
-            <h1 class="display-3 fw-bold text-color">Продажа нерудных и строительных материалов!</h1>
-            <h3 class="text-color fw-normal mb-3 text-color">С доставкой в Истре</h3>
+            <h1 class="display-3 fw-bold text-color">Доставка нерудных и строительных материалов!</h1>
+            <h3 class="text-color fw-normal mb-3 text-color">По Истринскому району</h3>
             <div class="d-flex gap-3 justify-content-center lead fw-normal">
                 <a class="icon-link" href="#section2">
-                    Оставить заявку!
+                    Расчитать стоимость
                     <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                 </a>
             </div>
