how to work with us

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <title>Заголовок страницы</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css">
-    <script src="script.js"></script>
+    <script src="C:\Users\kekov\GolandProjects\beckend\site_for_sale_with_notification\views\script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <!--kbrf-->
@@ -279,6 +279,76 @@
             </div>
         </div>
     </div>
+</div>
+<div class="price">
+    <h2 class="t1">Как с нами работать?</h2>
+</div>
+<!--card-group row row-cols-1 row-cols-md-5 g-4-->
+<div class="card-group row row-cols-1 row-cols-md-3 g-4" style="width: 80%; margin: auto">
+    <div class="col">
+        <div class="card text-center h-100 shadow">
+            <div class="card-header" style="text-align: center">
+                <h3>Оставте заявку</h3>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="col">
+                        <img src="car2.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer" style="text-align: center">
+                <small class="text-body-secondary">Не забываем про заказы</small>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card text-center h-100 shadow">
+            <div class="card-header" style="text-align: center">
+                <h3>Договариваемся</h3>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="col">
+                        <img src="sand.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer" style="text-align: center">
+                <small class="text-body-secondary">Согласованные цены гарантированно не изменятся</small>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card text-center h-100 shadow">
+            <div class="card-header" style="text-align: center">
+                <h3>Привозим песок</h3>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="col">
+                        <img src="car.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer" style="text-align: center">
+                <small class="text-body-secondary">Не подводим клиентов, знаем что на доставку песка завязаны другие процессы</small>
+            </div>
+        </div>
+    </div>
+
 </div>
 <div class="pricecalc">
     <h2 class="t1">Оставить заявку</h2>
