--- a/views/index.html
+++ b/views/index.html
@@ -350,6 +350,7 @@
     </div>
 
 </div>
+<div class="application-form" style="width: 80%; margin: auto">
 <div class="pricecalc">
     <h2 class="t1">Оставить заявку</h2>
 </div>
@@ -357,13 +358,13 @@
     <form action="/" method="POST" class="form-container">
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label text-color">Ваш номер телефона</label>
-            <input class="form-control" id="exampleFormControlInput1" placeholder="+79999999999" name="phoneNumber"/>
+            <input class="form-control shadow-sm" id="exampleFormControlInput1" placeholder="+79999999999" name="phoneNumber"/>
             <label for="exampleFormControlInput" class="form-label text-color">Ваше имя</label>
-            <input class="form-control" id="exampleFormControlInput" placeholder="Иван" name="name"/>
+            <input class="form-control shadow-sm" id="exampleFormControlInput" placeholder="Иван" name="name"/>
             <!--        <button type="submit">+</button>-->
         </div>
         <div id="container">
-            <div id="list_materials" class="input-group mb-3" style="background-color: rgb(255, 255, 255);">
+            <div id="list_materials" class="input-group mb-3 shadow-sm" style="background-color: rgb(255, 255, 255);">
                 <!--        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</button>-->
                 <select id="select_materials1" class="btn btn-outline-secondary dropdown-toggle select_materials" name="whatMaterial1">
                     <option value="1">Песок карьерный</option>
@@ -386,25 +387,25 @@
                 <!--            <button type="button" class="btn btn-info" onclick="addInput()">+</button>-->
             </div>
         </div>
-        <div class="input-group input-group-sm mb-3">
+        <div class="input-group input-group-sm mb-3 shadow-sm">
             <span class="input-group-text" id="inputGroup-sizing-sm2">Пункт назначения</span>
             <input name="address" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" placeholder="г. Москва">
         </div>
 
         <!--    Date -->
-        <div class="input-group input-group-sm mb-3">
+        <div class="input-group input-group-sm mb-3 shadow-sm">
             <span class="input-group-text" id="inputGroup-sizing-sm3 ">Удобная дата поставки</span>
             <input name="date" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" placeholder="12.12.1212">
         </div>
 
         <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label text-color">Комментарий к заказу</label>
-            <textarea name="comment" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea name="comment" class="form-control shadow-sm" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
         <button type="submit" style="background-color: rgb(233, 159, 25);" class="btn btn-primary btn-lg margin-auto" onclick="final_values()">Оставить заявку</button>
     </form>
 </div>
-
+</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
