--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <title>Заголовок страницы</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css">
-    <script src="C:\Users\kekov\GolandProjects\beckend\site_for_sale_with_notification\views\script.js"></script>
+    <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <!--kbrf-->
