--- a/views/index.html
+++ b/views/index.html
@@ -4,17 +4,18 @@
     <title>Заголовок страницы</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css">
-    <script src="script.js"></script>
+    <script type="text/javascript" href="C:/Users/79166/Gerard Fold/GO/site_for_sale_with_notification/views/script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body style="background-color: rgb(255, 253, 245);">
 <style>.image {
-    margin: auto;
+    margin: 0 auto;
     background: #000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 .image img {
     width: 100%;
-    opacity: 0.2;
+    opacity: 0.41;
     background-size: cover;
 }
 
@@ -76,7 +77,7 @@
 
 @keyframes marquee {
     from { transform: translateX(0); }
-    to { transform: translateX(-50%); }
+    to { transform: translateX(-40%); }
 }
 .price{
     padding-top: 50px;
@@ -119,22 +120,85 @@
 .btn-danger{
     width: 10%;
 }
-
+.row1{
+    margin: auto;
+    width: 90%;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
 .shadow{
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);;
+}
+.card1{
+    text-align: center;
+    margin: auto;
+    height: 400px;
+    width: 550px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.10);
+    background-color: rgb(255, 255, 255);
+}
+.card-title{
+    font-family: 'Roboto',Arial,sans-serif;
+    font-weight: 600;
+    font-size: 30px;
+    color: #000000;
+    padding-bottom: 25px;
+}
+.card-text{
+    font-family: 'Roboto',Arial,sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    color: #000000;
+}
+.card-body{
+    display: block;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.btn1{
+    color: #ffffff;
+    background-color: #e99f19;
+    font-family: 'Roboto',Arial,sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    margin: auto;
 }
 </style>
 <header>
     <div class="image">
-        <img style="height: 690px; object-fit: cover;" src="https://s11.gifyu.com/images/SctAa.gif" alt="SctAa.gif"
-        >
-        <h1 class="image-text1">Доставка песка в Истре и области без посредников, напрямую с карьера
+        <img style="height: 690px; object-fit: cover;" src="https://psv4.userapi.com/c909218/u240302302/docs/d51/1df7e6b43c2b/IMG_5561.jpg?extra=m9lDS3DYdgsB3GVT7hdZ0AEC9l4k9lgeFrCIcfNUzVkZVkU251gIIdviQpPBAgN0nOJGDmDZcFqFjHWw8sOie3IqOO_lE-gI7SNDy6xHOJXky9-DBX530Ojm0iYlJe2zCBH7QMCAeUye4-TqVX8WETAi1g" alt="SctAa.gif">
+        <h1 class="image-text1"><span>Доставка песка в Истре и области без посредников, напрямую с карьера
             <span class="image-text2">Низкие цены от 600р за м³ за счёт: своего автопарка, современной логистической системы и отсутствия посредников. Заказ от 20 м³. Отгрузка точно по весам. Все виды и фракции песка. ГОСТ.
-              <p style=line-height:7;><a href="#container"><button type="button" class="btn btn-success">Оставить заявку</button></a>
-              </span>
+              <p style=line-height:7;><a href="#container"><button type="button" style="background-color: mediumseagreen    ;" class="btn btn-success">Оставить заявку</button></a>
+              </span></span>
         </h1>
     </div>
 </header>
+<div class="row row1">
+    <div class="col-sm-6 mb-3 mb-sm-0 colsize">
+        <div class="card1">
+            <div class="card-body">
+                <h5 class="card-title">Я знаю
+                    какой песок мне нужен</h5>
+                <p class="card-text">Если вы знаете какой песок нужен — вид, фракция, ГОСТ, точный объем. Оставьте заявку. Мы предложим вам лучшие условия.</p>
+                <a href="#container" class="btn btn-warning btn1">Оставьте заявку</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 colsize">
+        <div class="card1">
+            <div class="card-body">
+                <h5 class="card-title">Я НЕ знаю
+                    какой песок мне нужен</h5>
+                <p class="card-text">Это норма. Позвоните или напишите. Расскажите о задаче, и наш специалист точно расскажет, какой песок подойдёт. Он делает это 20-30 раз в день и всегда оказывается прав.</p>
+                <a href="#container" class="btn btn-warning btn1">Консультация</a>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="marquee">
     <div class="track">
         <div class="content">&nbsp;Песок карьерный |
@@ -163,7 +227,7 @@
 <div class="card-group row row-cols-1 row-cols-md-5 g-4" style="width: 90%; margin: auto; background-color: rgb(255, 253, 245);" >
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Песок карьерный</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -172,7 +236,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Песок строительный</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -190,7 +254,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">песчано-гравийная смесь(ПГС)</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -199,7 +263,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Щебень природный</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -208,7 +272,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Пескогрунт</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -217,7 +281,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Грунт</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -226,7 +290,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Супесь</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -235,7 +299,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Суглинок</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -244,7 +308,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Глина</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -253,7 +317,7 @@
     </div>
     <div class="col" style="margin-left: 20%;">
         <div class="card h-100 shadow">
-            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Булыжник</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -262,7 +326,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Валун для ландшафта</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -271,7 +335,7 @@
     </div>
     <div class="col">
         <div class="card h-100 shadow">
-            <img src="karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Ландшафтный камень</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
@@ -279,6 +343,77 @@
         </div>
     </div>
 </div>
+
+<div class="price">
+    <h2 class="t1">Как с нами работать?</h2>
+</div>
+<!--card-group row row-cols-1 row-cols-md-5 g-4-->
+<div class="card-group row row-cols-1 row-cols-md-3 g-4" style="width: 80%; margin: auto">
+    <div class="col">
+        <div class="card text-center h-100 shadow">
+            <div class="card-header" style="text-align: center">
+                <h3>Оставте заявку</h3>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="col">
+                        <img src="https://github.com/MV7VM/site_for_sale_with_notification/blob/main/views/car2.png?raw=true" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer" style="text-align: center">
+                <small class="text-body-secondary">Не забываем про заказы</small>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card text-center h-100 shadow">
+            <div class="card-header" style="text-align: center">
+                <h3>Договариваемся</h3>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="col">
+                        <img src="https://github.com/MV7VM/site_for_sale_with_notification/blob/main/views/sand.png?raw=true" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer" style="text-align: center">
+                <small class="text-body-secondary">Согласованные цены гарантированно не изменятся</small>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card text-center h-100 shadow">
+            <div class="card-header" style="text-align: center">
+                <h3>Привозим песок</h3>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="col">
+                        <img src="https://github.com/MV7VM/site_for_sale_with_notification/blob/main/views/car.png?raw=true" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer" style="text-align: center">
+                <small class="text-body-secondary">Не подводим клиентов, знаем что на доставку песка завязаны другие процессы</small>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="pricecalc">
     <h2 class="t1">Оставить заявку</h2>
 </div>
@@ -330,7 +465,7 @@
             <label for="exampleFormControlTextarea1" class="form-label text-color">Комментарий к заказу</label>
             <textarea name="comment" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
-        <button type="submit" style="background-color: rgb(233, 159, 25);" class="btn btn-primary btn-lg margin-auto" onclick="final_values()">Оставить заявку</button>
+        <button type="submit" style="background-color: rgb(233, 159, 25); color: white" class="btn btn-warning btn-lg margin-auto" onclick="final_values()">Оставить заявку</button>
     </form>
 </div>
 
