fix proublem with local files

--- a/views/index.html
+++ b/views/index.html
@@ -297,7 +297,7 @@
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     </div>
                     <div class="col">
-                        <img src="car2.png" alt="">
+                        <img src="https://github.com/MV7VM/site_for_sale_with_notification/blob/main/views/car2.png?raw=true" alt="">
                     </div>
                 </div>
             </div>
@@ -318,7 +318,7 @@
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     </div>
                     <div class="col">
-                        <img src="sand.png" alt="">
+                        <img src="https://github.com/MV7VM/site_for_sale_with_notification/blob/main/views/sand.png?raw=true" alt="">
                     </div>
                 </div>
             </div>
