--- a/views/index.html
+++ b/views/index.html
@@ -3,170 +3,13 @@
 <head>
     <title>Заголовок страницы</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css">
-    <script type="text/javascript" href="C:/Users/79166/Gerard Fold/GO/site_for_sale_with_notification/views/script.js"></script>
+    <link HREF="style.css" rel="stylesheet">
+    <script type="text/javascript" src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body style="background-color: rgb(255, 253, 245);">
-<style>.image {
-    margin: 0 auto;
-    background: #000;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-.image img {
-    width: 100%;
-    opacity: 0.41;
-    background-size: cover;
-}
-
-.image-text1 {
-    width: 1200px;
-    line-height: 59px;
-    text-align: center;
-    position: absolute;
-    font-size: 50px;
-    font-weight: 900;
-    font-family: 'Roboto',Arial,sans-serif;
-    top: 170px;
-    left: 23%;
-    right: 50%;
-    margin-left: -170px;
-    color: white;
-    border-radius: 6px;
-}
-
-.image-text2 {
-    width: 1100px;
-    line-height: 40px;
-    text-align: center;
-    position: absolute;
-    font-size: 21px;
-    font-family: 'Roboto',Arial,sans-serif;
-    font-weight: 900;
-    top: 170px;
-    left: 17%;
-    right: 48%;
-    margin-left: -170px;
-    color: white;
-    border-radius: 6px;
-}
-
-.btn {
-    width: 220px;
-    height: 50px;
-}
-.marquee {
-    padding-top: 6px;
-    position: relative;
-    width: 100vw;
-    max-width: 100%;
-    height: 40px;
-    overflow-x: hidden;
-    background-color: white;
-}
-
-.track {
-    color: #000;
-    font-size: 21px;
-    font-family: 'Roboto',Arial,sans-serif;
-    position: absolute;
-    white-space: nowrap;
-    will-change: transform;
-    animation: marquee 32s linear infinite;
-}
-
-@keyframes marquee {
-    from { transform: translateX(0); }
-    to { transform: translateX(-40%); }
-}
-.price{
-    padding-top: 50px;
-    padding-bottom: 14px;
-    margin: auto;
-}
-
-.pricecalc{
-    padding-top: 110px;
-    padding-bottom: 1px;
-    margin: auto;
-}
-
-.t1{
-    margin: auto;
-    text-align: center;
-    font-family: 'Roboto',Arial,sans-serif;
-    font-weight: 600;
-    color: #000000;
-    font-size: 42px;
-    line-height: 1.23;
-}
-
-.card-group{
-    width: 60%;
-    margin: auto;
-    background-color: rgb(255, 253, 245);
-    border-radius: 0%;
-}
-.form-container {
-    width: 60%;
-    margin: 0 auto;
-}
-
-.btn-info{
-    width: 10%;
-    background-color: rgb(233, 159, 25);
-    color: white;
-}
-.btn-danger{
-    width: 10%;
-}
-.row1{
-    margin: auto;
-    width: 90%;
-    padding-top: 30px;
-    padding-bottom: 20px;
-}
-.shadow{
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);;
-}
-.card1{
-    text-align: center;
-    margin: auto;
-    height: 400px;
-    width: 550px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.10);
-    background-color: rgb(255, 255, 255);
-}
-.card-title{
-    font-family: 'Roboto',Arial,sans-serif;
-    font-weight: 600;
-    font-size: 30px;
-    color: #000000;
-    padding-bottom: 25px;
-}
-.card-text{
-    font-family: 'Roboto',Arial,sans-serif;
-    font-weight: 300;
-    font-size: 20px;
-    color: #000000;
-}
-.card-body{
-    display: block;
-    padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.btn1{
-    color: #ffffff;
-    background-color: #e99f19;
-    font-family: 'Roboto',Arial,sans-serif;
-    font-weight: 300;
-    font-size: 20px;
-    margin: auto;
-}
-</style>
+<link HREF="style.css" rel="stylesheet">
+<script type="text/javascript" src="script.js"></script>
 <header>
     <div class="image">
         <img style="height: 690px; object-fit: cover;" src="https://psv4.userapi.com/c909218/u240302302/docs/d51/1df7e6b43c2b/IMG_5561.jpg?extra=m9lDS3DYdgsB3GVT7hdZ0AEC9l4k9lgeFrCIcfNUzVkZVkU251gIIdviQpPBAgN0nOJGDmDZcFqFjHWw8sOie3IqOO_lE-gI7SNDy6xHOJXky9-DBX530Ojm0iYlJe2zCBH7QMCAeUye4-TqVX8WETAi1g" alt="SctAa.gif">
@@ -177,8 +20,9 @@
         </h1>
     </div>
 </header>
+<link HREF="style.css" rel="stylesheet">
 <div class="row row1">
-    <div class="col-sm-6 mb-3 mb-sm-0 colsize">
+    <div class="col-sm-6 mb-3 mb-sm-0">
         <div class="card1">
             <div class="card-body">
                 <h5 class="card-title">Я знаю
@@ -218,13 +62,31 @@
             Щебень |
             Суглинок |
             Глина |
+            Гравий |
+            Песок карьерный |
+            Песок мытый |
+            Песок сеяный |
+            ПГС (песчано-гравийная смесь) |
+            Пескогрунт |
+            Щебень |
+            Суглинок |
+            Глина |
+            Гравий |
+            Песок карьерный |
+            Песок мытый |
+            Песок сеяный |
+            ПГС (песчано-гравийная смесь) |
+            Пескогрунт |
+            Щебень |
+            Суглинок |
+            Глина |
             Гравий |</div>
     </div>
 </div>
 <div class="price">
     <h2 class="t1">Прайс-лист</h2>
 </div>
-<div class="card-group row row-cols-1 row-cols-md-5 g-4" style="width: 90%; margin: auto; background-color: rgb(255, 253, 245);" >
+<div class="card-group card-group1 row row-cols-1 row-cols-md-5 g-4" style="width: 90%; margin: auto; background-color: rgb(255, 253, 245);" >
     <div class="col">
         <div class="card h-100 shadow">
             <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
@@ -348,20 +210,19 @@
     <h2 class="t1">Как с нами работать?</h2>
 </div>
 <!--card-group row row-cols-1 row-cols-md-5 g-4-->
-<div class="card-group row row-cols-1 row-cols-md-3 g-4" style="width: 80%; margin: auto">
+<div class="card-group card-group2 row row-cols-1 row-cols-md-3 g-4" style="width: 80%; margin: auto">
     <div class="col">
-        <div class="card text-center h-100 shadow">
+        <div class="card text-center h-100 shadow-sm">
             <div class="card-header" style="text-align: center">
-                <h3>Оставте заявку</h3>
+                <h2>Оставляете заявку</h2>
             </div>
             <div class="card-body">
                 <div class="row">
                     <div class="col">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text">Позвоните или Оставте заявку. Поможем и расчитаем стоимость за 5 минут.</p>
                     </div>
                     <div class="col">
-                        <img src="https://github.com/MV7VM/site_for_sale_with_notification/blob/main/views/car2.png?raw=true" alt="">
+                        <img src="car2.png" alt="">
                     </div>
                 </div>
             </div>
@@ -371,18 +232,17 @@
         </div>
     </div>
     <div class="col">
-        <div class="card text-center h-100 shadow">
+        <div class="card text-center h-100 shadow-sm">
             <div class="card-header" style="text-align: center">
-                <h3>Договариваемся</h3>
+                <h2>Договариваемся</h2>
             </div>
             <div class="card-body">
                 <div class="row">
                     <div class="col">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text">Договариваемся с вами. Уточняем адрес, согласуем время поставки.</p>
                     </div>
                     <div class="col">
-                        <img src="https://github.com/MV7VM/site_for_sale_with_notification/blob/main/views/sand.png?raw=true" alt="">
+                        <img src="sand.png" alt="">
                     </div>
                 </div>
             </div>
@@ -392,18 +252,17 @@
         </div>
     </div>
     <div class="col">
-        <div class="card text-center h-100 shadow">
+        <div class="card text-center h-100 shadow-sm">
             <div class="card-header" style="text-align: center">
-                <h3>Привозим песок</h3>
+                <h2>Привозим песок</h2>
             </div>
             <div class="card-body">
                 <div class="row">
                     <div class="col">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text">Доставка и прием оплаты. Всегда вовремя. Выгружаем, принимаем оплату</p>
                     </div>
                     <div class="col">
-                        <img src="https://github.com/MV7VM/site_for_sale_with_notification/blob/main/views/car.png?raw=true" alt="">
+                        <img src="car.png" alt="">
                     </div>
                 </div>
             </div>
