--- a/views/style.css
+++ b/views/style.css
@@ -1,10 +1,11 @@
 .image {
-    margin: auto;
+    margin: 0 auto;
     background: #000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 .image img {
     width: 100%;
-    opacity: 0.2;
+    opacity: 0.41;
     background-size: cover;
 }
 
@@ -66,7 +67,7 @@
 
 @keyframes marquee {
     from { transform: translateX(0); }
-    to { transform: translateX(-50%); }
+    to { transform: translateX(-30%); }
 }
 .price{
     padding-top: 50px;
@@ -90,11 +91,11 @@
     line-height: 1.23;
 }
 
-.card-group{
+.card-group1{
     width: 60%;
     margin: auto;
     background-color: rgb(255, 253, 245);
-    border-radius: 0%;
+    border-radius: 0;
 }
 .form-container {
     width: 60%;
@@ -109,7 +110,68 @@
 .btn-danger{
     width: 10%;
 }
+.row1{
+    margin: auto;
+    width: 80%;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
 
 .shadow{
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);;
+}
+.card1{
+    text-align: center;
+    margin: auto;
+    height: 400px;
+    width: 550px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.10);
+    background-color: rgb(255, 255, 255);
+}
+.card-title{
+    font-family: 'Roboto',Arial,sans-serif;
+    font-weight: 600;
+    font-size: 30px;
+    color: #000000;
+    padding-bottom: 25px;
+}
+.card-text{
+    font-family: 'Roboto',Arial,sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    color: #000000;
+}
+.card-body{
+    display: block;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.btn1{
+    color: #ffffff;
+    background-color: #e99f19;
+    font-family: 'Roboto',Arial,sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    margin: auto;
+}
+
+.card-header {
+    background-color: rgb(255, 255, 255);
+}
+.card-text {
+    font-family: 'Roboto',Arial,sans-serif;
+    font-weight: 300;
+    font-size: 26px;
+}
+.text-body-secondary {
+    font-family: 'Roboto',Arial,sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+}
+
+.card-footer {
+    background-color: rgb(255, 255, 255);
 }
