--- a/views/index.html
+++ b/views/index.html
@@ -35,8 +35,8 @@
             <div class="card-body">
                 <h5 class="card-title">Я НЕ знаю
                     какой песок мне нужен</h5>
-                <p class="card-text">Это норма. Позвоните или напишите. Расскажите о задаче, и наш специалист точно расскажет, какой песок подойдёт. Он делает это 20-30 раз в день и всегда оказывается прав.</p>
-                <a href="#container" class="btn btn-warning btn1">Консультация</a>
+                <p class="card-text">Это норма. Позвоните или напишите. Расскажите о задаче, и наш специалист точно расскажет, какой песок подойдёт. Он делает это 20-30 раз в день и всегда оказывается прав. Телефон: +79775935401</p>
+                <a href="tel:+79775935401" class="btn btn-warning btn1">Позвонить</a>
             </div>
         </div>
     </div>
@@ -278,7 +278,7 @@
     <form action="/" method="POST" class="form-container">
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label text-color">Ваш номер телефона</label>
-            <input class="form-control" id="exampleFormControlInput1" placeholder="+79999999999" name="phoneNumber"/>
+            <input class="form-control" id="exampleFormControlInput1" placeholder="+79999999999" name="phoneNumber" required/>
             <label for="exampleFormControlInput" class="form-label text-color">Ваше имя</label>
             <input class="form-control" id="exampleFormControlInput" placeholder="Иван" name="name"/>
             <!--        <button type="submit">+</button>-->
