--- a/views/index.html
+++ b/views/index.html
@@ -98,7 +98,7 @@
         <div class="card h-100 shadow">
             <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Песок строительный</h5>
+                <h5 class="card-title">Песок мытый</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
             </div>
         </div>
@@ -107,7 +107,7 @@
         <div class="card h-100 shadow">
             <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Гравий</h5>
+                <h5 class="card-title">Песок сеяный</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
             </div>
         </div>
@@ -116,16 +116,7 @@
         <div class="card h-100 shadow">
             <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">песчано-гравийная смесь(ПГС)</h5>
-                <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100 shadow">
-            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Щебень природный</h5>
+                <h5 class="card-title">ПГС (песчано-гравийная смесь)</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
             </div>
         </div>
@@ -143,7 +134,7 @@
         <div class="card h-100 shadow">
             <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Грунт</h5>
+                <h5 class="card-title">Щебень 5/20</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
             </div>
         </div>
@@ -152,7 +143,16 @@
         <div class="card h-100 shadow">
             <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Супесь</h5>
+                <h5 class="card-title">Щебень 20/40</h5>
+                <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100 shadow">
+            <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Щебень 40/70</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
             </div>
         </div>
@@ -179,7 +179,7 @@
         <div class="card h-100 shadow">
             <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Булыжник</h5>
+                <h5 class="card-title">Гравий 5/20</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
             </div>
         </div>
@@ -188,7 +188,7 @@
         <div class="card h-100 shadow">
             <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Валун для ландшафта</h5>
+                <h5 class="card-title">Гравий 20/40</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
             </div>
         </div>
@@ -197,7 +197,7 @@
         <div class="card h-100 shadow">
             <img src="https://static.tildacdn.com/tild3263-3165-4538-a230-636363656638/karier-pesok_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Ландшафтный камень</h5>
+                <h5 class="card-title">Гравий 40/70</h5>
                 <p class="card-text">Цена за тонну от ... руб. за м3 от ... руб.</p>
             </div>
         </div>
